feat: ts no jam
